# local-transport-feed

./: .gitignore  Cargo.toml  README.md
local-transport-feed/: Cargo.toml
local-transport-feed/src/: client.rs  lib.rs
local-transport-feed/src/domain/: departure.rs  mod.rs  station.rs
local-transport-feed/src/services/: mod.rs
local-transport-feed/src/services/web/: mod.rs  web_client.rs
local-transport-feed/src/services/web/transport/: mod.rs  transport_api.rs
local-transport-feed/tests/: client.rs
local-transport-feed/tests/files/: hornsey_live_trains.json
