[package]
name = "local-transport-feed"
version = "0.1.0"
authors = ["Josh Jones <ohblonddev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
hyper = "0.13"
log = "0.4"

[dev-dependencies]
mockall = "0.6.0"
spectral = "0.6.0"
