[package]
name = "local-transport-feed"
version = "0.1.0"
authors = ["Josh Jones <ohblonddev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["json"] }
async-trait = "0.1.24"

[dev-dependencies]
mockall = "0.6.0"
spectral = "0.6.0"
tokio = { version = "0.2", features = ["full"] }
mockito = "0.23.1"
pretty_env_logger = "0.4.0"